--- a/base/css/style.css
+++ b/base/css/style.css
@@ -3023,6 +3023,9 @@ body ::-webkit-scrollbar-track {
 .modal-container.w466 {
   width: 46.6rem;
 }
+.modal-container.w480 {
+  width: 48rem;
+}
 .modal-container.w508 {
   width: 50.8rem;
 }
@@ -3092,6 +3095,11 @@ body ::-webkit-scrollbar-track {
   gap: 0 0.4rem;
   margin-top: 0.8rem;
   padding: 1rem 3rem 2.5rem;
+}
+.modal-bottom.button-center {
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 .modal-bottom.button-both {
   -webkit-box-pack: justify;
@@ -4347,6 +4355,204 @@ body ::-webkit-scrollbar-track {
 }
 .ly-copyright.c-white {
   background: #fff;
+}
+
+/* 로그인/ID, pw 찾기 */
+.login-wrap {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-line-pack: center;
+      align-content: center;
+  height: calc(99.9vh - 2rem);
+  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(4.86%, rgba(8, 54, 76, 0.2)), to(#08364c)), url("/base/images/login_bg.png");
+  background-image: linear-gradient(180deg, rgba(8, 54, 76, 0.2) 4.86%, #08364c 100%), url("/base/images/login_bg.png");
+  background-repeat: no-repeat;
+  background-position: 0 0;
+  background-size: cover;
+}
+.login-wrap.type2 {
+  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(8, 54, 76, 0.8)), to(rgba(8, 54, 76, 0.8))), url("/base/images/login_bg.png");
+  background-image: linear-gradient(rgba(8, 54, 76, 0.8) 0%, rgba(8, 54, 76, 0.8) 100%), url("/base/images/login_bg.png");
+}
+.login-wrap.type2 .login-container > .tit {
+  font-size: 3.2rem;
+}
+.login-container h1 {
+  width: 17.615rem;
+  height: 4.65rem;
+  background-image: url("/base/images/logo.png");
+  background-repeat: no-repeat;
+  background-position: 0 0;
+  background-size: contain;
+  margin: 0 auto;
+}
+.login-container > .tit {
+  display: block;
+  margin: 2.2rem 0;
+  line-height: 100%;
+  font-size: 4rem;
+  color: #fff;
+  font-weight: 600;
+  text-align: center;
+}
+.login-box {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  -ms-flex-line-pack: start;
+      align-content: flex-start;
+  gap: 1rem 0;
+  width: 30rem;
+  margin: 0 auto;
+}
+.login-box input {
+  width: 100%;
+  line-height: 4.8rem;
+  padding: 0 2rem;
+  border: 0;
+  outline: 0;
+  font-size: 1.6rem;
+  color: #fff;
+  font-weight: 600;
+  border-radius: 10rem;
+  background: rgba(255, 255, 255, 0.4);
+}
+.login-box input::-webkit-input-placeholder {
+  font-size: 1.6rem;
+  color: #fff;
+  font-weight: 600;
+}
+.login-box input::-moz-placeholder {
+  font-size: 1.6rem;
+  color: #fff;
+  font-weight: 600;
+}
+.login-box input:-ms-input-placeholder {
+  font-size: 1.6rem;
+  color: #fff;
+  font-weight: 600;
+}
+.login-box input::-ms-input-placeholder {
+  font-size: 1.6rem;
+  color: #fff;
+  font-weight: 600;
+}
+.login-box input::placeholder {
+  font-size: 1.6rem;
+  color: #fff;
+  font-weight: 600;
+}
+.login-box .btn-login {
+  display: block;
+  width: 100%;
+  line-height: 4.8rem;
+  font-size: 1.8rem;
+  color: #fff;
+  font-weight: 600;
+  text-align: center;
+  border-radius: 10rem;
+  background: #03a0fc;
+}
+.login-box .find-wrap {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-line-pack: center;
+      align-content: center;
+  width: 100%;
+  margin-top: 0.45rem;
+}
+.login-box .find-wrap a {
+  font-size: 1.6rem;
+  color: #fff;
+}
+.login-box .find-wrap a:first-child::after {
+  content: "|";
+  display: inline-block;
+  vertical-align: middle;
+  margin: 0 1.2rem;
+  font-size: 1.6rem;
+  color: #fff;
+}
+.login-box .btn-confirm-group {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-line-pack: center;
+      align-content: center;
+  gap: 0 1rem;
+  width: 100%;
+}
+.login-box .btn-confirm-group a {
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+  line-height: 4rem;
+  border-radius: 10rem;
+  text-align: center;
+  font-size: 1.8rem;
+  color: #fff;
+  font-weight: 600;
+}
+.login-box .btn-confirm-group a:first-child {
+  background: #3b5970;
+}
+.login-box .btn-confirm-group a:last-child {
+  background: #0091e5;
+}
+
+.change-pw > em {
+  display: block;
+  margin-top: 4.05rem;
+  line-height: normal;
+  text-align: center;
+  font-size: 1.8rem;
+  color: #727272;
+  font-weight: 400;
+}
+.change-pw .data-tbl {
+  padding-top: 3.35rem;
 }
 
 /* GNB */
