--- a/base/css/is.css
+++ b/base/css/is.css
@@ -145,12 +145,6 @@
   width: 0.1rem;
   background: #e8e8e8;
 }
-.main-stats-container .summary-info-item-wrap > li:nth-last-child(1) {
-  -webkit-box-flex: 0;
-      -ms-flex: 0 0 auto;
-          flex: 0 0 auto;
-  width: 23.2rem;
-}
 .main-stats-container .summary-info-item-wrap > li > .tit {
   display: block;
   padding: 0.75rem 1rem;
@@ -206,6 +200,17 @@
 }
 .main-stats-container .summary-info-item-wrap > li .tbl-bind table td em {
   font-weight: 700;
+}
+.main-stats-container .summary-info-item-wrap > li:nth-child(4) {
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 22rem;
+          flex: 0 0 22rem;
+}
+.main-stats-container .summary-info-item-wrap > li:last-child {
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 auto;
+          flex: 0 0 auto;
+  width: 23.2rem;
 }
 .main-stats-container .summary-info-item-wrap > li:last-child .tbl-bind table {
   width: 11.5rem;
@@ -357,8 +362,8 @@
   height: calc(100% - 2.8rem);
 }
 .main-stats-container .summary-info-chart .chart2 .chart-container .chart-inner {
-  width: 27.2rem;
-  height: 27.2rem;
+  width: 32rem;
+  height: 32rem;
 }
 
 /* 교차로 통계 */
@@ -1724,6 +1729,31 @@
   position: absolute;
   left: 2.26rem;
   top: 2.38rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-line-pack: center;
+      align-content: center;
+  gap: 0 1.3rem;
+}
+.split-screen-info i {
+  padding: 0 1.8rem;
+  line-height: 3.1rem;
+  font-size: 1.8rem;
+  color: #fff;
+  font-weight: 500;
+  border-radius: 2rem;
+  background: rgba(255, 255, 255, 0.3);
 }
 .split-screen-info em {
   font-size: 2rem;
@@ -1738,14 +1768,9 @@
   -o-object-fit: fill;
      object-fit: fill;
 }
-.split-screen .init-video {
-  display: block;
-  width: 100%;
-  height: 100%;
-  border-radius: 0.5rem;
-  border: 2px solid #999999;
-  background: url(/base/images/icon_play_lg.png) no-repeat 50% 50% #3d3d3d;
-  background-size: 6.2rem 6.2rem;
+.split-screen .split-video[poster] {
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 .split-screen .no-video {
   display: block;
