--- a/base/css/style.css
+++ b/base/css/style.css
@@ -823,6 +823,11 @@ body ::-webkit-scrollbar-track {
   -webkit-box-shadow: none !important;
           box-shadow: none !important;
 }
+.ui.button.basic.secondary.sm {
+  padding: 0 1rem;
+  line-height: 2.9rem;
+  font-size: 1.4rem;
+}
 .ui.button.basic.secondary.c-gray {
   padding: 0.6rem 2rem;
   line-height: 100%;
@@ -3181,6 +3186,45 @@ body ::-webkit-scrollbar-track {
 }
 
 /*---------------------------------------------------------------
+  [모달 팝업 커스텀2]
+-----------------------------------------------------------------*/
+.custom-modal-wrap {
+  display: none;
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  z-index: 10;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  background: rgba(0, 0, 0, 0.5);
+}
+.custom-modal-wrap.active {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-line-pack: center;
+      align-content: center;
+}
+.custom-modal-wrap .modal {
+  display: block;
+}
+
+/*---------------------------------------------------------------
   [커스텀 팝업]
 -----------------------------------------------------------------*/
 /* alert, confirm */
@@ -4184,6 +4228,11 @@ body ::-webkit-scrollbar-track {
 .ly-map .ico-camera {
   position: absolute;
   z-index: 1;
+}
+.ly-map .ico-camera.active {
+  background-image: url("/base/images/icon_camera_active.png");
+  background-position: -1px 0;
+  background-size: 3.6rem 3.6rem;
 }
 .ly-map .speech-bubble-guide {
   display: none;
